[project]
name = "brand_monitoring"
version = "0.1.0"
description = "brand-monitoring using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
brand_monitoring = "brand_monitoring.main:run"
run_crew = "brand_monitoring.main:run"
train = "brand_monitoring.main:train"
replay = "brand_monitoring.main:replay"
test = "brand_monitoring.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
